# top-down-shooter

./: .gitignore  Cargo.toml
grid/: Cargo.toml
grid/src/: component.rs  lib.rs  options.rs  plugin.rs
grid/src/render/: mod.rs
levels/: ASDF.tdsave  qASDF.tdsave
lighting/: Cargo.toml
lighting/src/: lib.rs  light.rs  plugin.rs
lighting/src/render/: extract.rs  math.wgsl  mod.rs  types.wgsl
lighting/src/render/light_map/: light_map.wgsl
lighting/src/render/sdf/: sdf.wgsl
src/: main.rs  state.rs
src/editor/: mod.rs  plugin.rs  structs.rs
src/editor/objects/: lamp.rs  mod.rs  plugin.rs  wall.rs
src/level/: mod.rs  objects.rs
src/level/parser/: mod.rs  reader.rs  tokens.rs  traits.rs  writer.rs
src/level/serializers/: lamp.rs  mod.rs  wall.rs
src/objects/: mod.rs
src/objects/lamp/: mod.rs
src/objects/wall/: mod.rs
src/player/: components.rs  mod.rs  plugin.rs  spawn.rs
src/plugins/: base.rs  lighting.rs  mod.rs
src/render/: camera.rs
src/screen/main/: marker.rs  mod.rs  plugin.rs  state.rs  ui.rs
ui_toolkit/: Cargo.toml
ui_toolkit/src/: command.rs  lib.rs  prelude.rs
ui_toolkit/src/animator/: mod.rs  plugin.rs
ui_toolkit/src/animator/animate_enter/: plugin.rs
ui_toolkit/src/context/: mod.rs
ui_toolkit/src/dialog/: events.rs  mod.rs  plugin.rs  trigger.rs  types.rs
ui_toolkit/src/dialog/render/: markers.rs  mod.rs  type_alert.rs  type_select.rs
ui_toolkit/src/plugin/: mod.rs
ui_toolkit/src/tween/lens/: border.rs  color.rs  common.rs  mod.rs  size.rs
ui_toolkit/src/ui/: mod.rs
ui_toolkit/src/ui/style/: mod.rs
ui_toolkit/src/ui/text/: builder.rs  ext.rs  mod.rs
ui_toolkit/src/widgets/: mod.rs
ui_toolkit/src/widgets/button/: mod.rs
ui_toolkit/src/widgets/card/: mod.rs
