[package]
name = "shoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_egui = "0.29"
bevy-inspector-egui = "0.26.0"
voronoice = "0.2.0"
rand = "0.8.5"
strum = "0.26"
strum_macros = "0.26"
url = "2.5.2"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
lighting = { path = "./lighting" }
ui_toolkit = { path = "./ui_toolkit" }

# Use LLD for link
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]